--- a/package.json
+++ b/package.json
@@ -18,12 +18,5 @@
     "url": "https://github.com/nailkhasipov/calendar/issues"
   },
   "homepage": "https://github.com/nailkhasipov/calendar#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.1.0",
-    "babel-preset-env": "^1.6.1",
-    "jest": "^22.1.4",
-    "regenerator-runtime": "^0.11.1",
-    "webpack": "^3.8.1"
-  }
+  "devDependencies": {}
 }
